# Android-FFmpeg

./: README.md
app/: build.gradle
app/release/: app-release.apk
app/src/androidTest/java/vip/ruoyun/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/vip/ruoyun/ffmpeg/: MainActivity.java  XPlay.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/vip/ruoyun/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
keystore/: keystore.jks
